[package]
name = "weinsa_westem_distributedsystems_project1"
version = "0.1.0"
authors = ["Avi Weinstock <aweinstock314@gmail.com>"]

[dependencies]
argparse = "0.2.1"
bincode = "0.6.0"
byteorder = "0.5.3"
futures = "0.1.1"
nom = "1.2.4"
serde = "0.8"
serde_derive = "0.8"
tokio-core = { git = "https://github.com/tokio-rs/tokio-core" }
